<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chrisjohnson.myapplication.ViewUrl">

    <TextView
        android:id="@+id/network_status"
        android:text="@string/network_status_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/wifi_status"
        android:text="@string/wifi_status_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/network_status"/>

    <TextView
        android:id="@+id/radio_status"
        android:text="@string/radio_status_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_status"/>

    <TextView
        android:id="@+id/url_called"
        android:text="@string/url_called"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_status"/>

    <TextView
        android:id="@+id/response_code"
        android:text="@string/response_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_called"/>

    <TextView
        android:id="@+id/html_source_title"
        android:text="@string/html_source_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/response_code"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_url_spinner"
        android:layout_below="@id/html_source_title"/>

    <TextView
        android:id="@+id/html_source"
        android:text="@string/html_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/html_source_title"
        android:visibility="invisible"
        android:typeface="monospace"
        android:textStyle="bold"/>



</RelativeLayout>
