<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <!--<EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_below="@id/edit_message"
        android:layout_alignRight="@id/edit_message"/>-->
    <TextView
        android:id="@+id/app_description"
        android:text="@string/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:id="@+id/edit_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/edit_url"
        android:layout_below="@id/app_description"/>
    <Button
        android:id="@+id/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go"
        android:onClick="loadUrl"
        android:layout_below="@id/edit_url"
        android:layout_alignRight="@id/edit_url"/>
</RelativeLayout>
